fix again on mobile screen

--- a/src/Components/SaveTheDate/SaveTheDate.scss
+++ b/src/Components/SaveTheDate/SaveTheDate.scss
@@ -20,7 +20,7 @@ html {
   background-position: top;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   opacity: 0.75;
   align-items: center;
   color: white;
@@ -29,8 +29,9 @@ html {
   text-align: center;
 
   &__container {
-    height: 85vh;
-    width: 85vw;
+    height: 100%;
+    max-height: 100%;
+    width: 90%;
     background-color: rgba(0, 0, 0, 0.2);
     z-index: 2;
     border-radius: 5px;
@@ -39,15 +40,17 @@ html {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    padding: 0;
 
     @include respond-to(tablet) {
-      height: 85vh;
+      height: 85%;
       width: 80vw;
       padding: 3% 0;
     }
 
     @include respond-to(desktop) {
-      height: 85vh;
+      height: 85%;
+      width: 80vw;
       padding-bottom: 2%;
     }
   }
